sort.basic.cocktail.AlgCocktailSort2.scala.error
Compilation error:
AlgCocktailSort2:18: error: not found: value i1
      if (plusPetit(i+1, i1)){
                         ^